--- a/Creational_Patterns.ipynb
+++ b/Creational_Patterns.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c300e968",
+   "id": "1b4e662e",
    "metadata": {},
    "source": [
     "## Factory Method Pattern:\n",
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ef6692e2",
+   "id": "5e85c15c",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e475179",
+   "id": "8c4163c9",
    "metadata": {},
    "source": [
     "In this example, Shape is the interface (or abstract base class) with a factory method draw. Two concrete subclasses, Circle and Rectangle, implement this factory method to create objects of their respective types. The create_shape function in the client code uses the factory method to create objects without knowing the specific classes of shapes being created.\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "006b564d",
+   "id": "ce13d20e",
    "metadata": {},
    "source": [
     "## Abstract Factory Pattern (Kit Pattern)\n",
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d788d417",
+   "id": "1f42b341",
    "metadata": {},
    "outputs": [
     {
@@ -191,9 +191,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7d9837e2",
+   "metadata": {},
+   "source": [
+    "In this example, there are two families of furniture: modern and Victorian. The Abstract Factory (FurnitureFactory) defines two factory methods, create_chair and create_sofa, for creating chairs and sofas. Concrete factories (ModernFurnitureFactory and VictorianFurnitureFactory) implement these methods to create specific products (modern or Victorian chairs and sofas).\n",
+    "\n",
+    "The client code (order_furniture) interacts with the abstract factory to create furniture objects without knowing the specific classes of those objects. This demonstrates how the Abstract Factory Pattern decouples the client code from the concrete implementations of the objects while ensuring that the created objects are compatible with each other within the same family (e.g., modern or Victorian furniture)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6d480a6",
+   "id": "099f6dfa",
    "metadata": {},
    "outputs": [],
    "source": []
